--- a/Dockerfile-tf-cpu
+++ b/Dockerfile-tf-cpu
@@ -1,7 +1,7 @@
 # thinkall/edge-computing:tfcpu1.11-py3.5
 # build from ubuntu, python 3.5, tensorflow-cpu 1.11
 
-from arm64/ubuntu16.04
+from arm64v8/ubuntu:16.04
 
 MAINTAINER Li JIANG <bnujli@gmail.com>
 
